# CTU-FIT-Master

NI-KOP/knapsack/: main.py  main_annealing.py
NI-KOP/knapsack/benchmark/: benchmark.py  complexity.py
NI-KOP/knapsack/helpers/: loader.py  logger.py  output_writter.py  utils.py
NI-KOP/knapsack/models/: item.py  knapsack.py  knapsackset.py  solution.py
NI-KOP/knapsack/resolvers/: problem_resolvers.py  resolver_common.py
NI-KOP/reports/2/: boikomyk_knapsack_report_2.html  boikomyk_knapsack_report_2.ipynb
NI-KOP/reports/3/: boikomyk_knapsack_report_3.ipynb
NI-KOP/reports/4/: boikomyk_knapsack_report_4.html  boikomyk_knapsack_report_4.ipynb
NI-KOP/reports/5/: boikomyk_sat_report_5.html
NI-KOP/sat/: main.py
NI-KOP/sat/models/: clause.py  literal.py  sat_problem.py  sat_reference.py  sat_solution.py  state.py
NI-KOP/sat/resolvers/: annealing_functions.py  simulated_annealing.py
NI-KOP/sat/utils/: helpers.py  logger.py  output_writer.py  parser.py
NI-PDP/semestral_work/: CMakeLists.txt  ChessPiece.h  Chessboard.cpp  Chessboard.h  Cli.cpp  Cli.h  Clock.cpp  Clock.h  InputReader.cpp  InputReader.h  Logger.cpp  Logger.h  ProblemInstance.cpp  ProblemInstance.h  Readme.md  Solution.cpp  Solution.h  Solver.cpp  Solver.h  Typing.h  main.cpp  messages.h
NI-PSL/semestral_work/: README.md  build.sbt
NI-PSL/semestral_work/app/: Module.scala
NI-PSL/semestral_work/conf/: application.conf  routes
NI-PSL/semestral_work/resources/: dev_db.mv.db  dev_db.trace.db
thesis/: readme.txt
thesis/src/thesis/: ctufit-thesis.tex
thesis/src/thesis/text/: appendix.tex  (+4 more)
(+104 files in other folders)
